@@ -17,17 +17,17 @@ my %WriteMakefileArgs = (
   "NAME" => "Prometheus::Tiny::Shared",
   "PREREQ_PM" => {
     "Carp" => 0,
-    "DBD::SQLite" => 0,
-    "DBI" => 0,
+    "File::Path" => 0,
+    "File::Temp" => 0,
+    "Hash::SharedMem" => 0,
+    "JSON::XS" => 0,
     "Prometheus::Tiny" => "0.004",
-    "Sereal" => 0,
     "parent" => 0,
     "strict" => 0,
     "warnings" => 0
   },
   "TEST_REQUIRES" => {
     "Data::Random" => 0,
-    "File::Temp" => 0,
     "File::stat" => 0,
     "HTTP::Request::Common" => 0,
     "Plack::Test" => 0,
@@ -44,15 +44,15 @@ my %WriteMakefileArgs = (
 
 my %FallbackPrereqs = (
   "Carp" => 0,
-  "DBD::SQLite" => 0,
-  "DBI" => 0,
   "Data::Random" => 0,
+  "File::Path" => 0,
   "File::Temp" => 0,
   "File::stat" => 0,
   "HTTP::Request::Common" => 0,
+  "Hash::SharedMem" => 0,
+  "JSON::XS" => 0,
   "Plack::Test" => 0,
   "Prometheus::Tiny" => "0.004",
-  "Sereal" => 0,
   "Test::Differences" => 0,
   "Test::Exception" => 0,
   "Test::More" => 0,
