@@ -12,7 +12,7 @@ Prometheus::Tiny::Shared - A tiny Prometheus client with a shared database behin
 
 # DESCRIPTION
 
-`Prometheus::Tiny::Shared` is a wrapper around [Prometheus::Tiny](https://metacpan.org/pod/Prometheus%3A%3ATiny) that instead of storing metrics data in a hashtable, stores them in a shared database (provided by SQLite, though this may change in the future). This lets you keep a single set of metrics in a multithreaded app.
+`Prometheus::Tiny::Shared` is a wrapper around [Prometheus::Tiny](https://metacpan.org/pod/Prometheus%3A%3ATiny) that instead of storing metrics data in a hashtable, stores them in a shared datastore (provided by [Hash::SharedMem](https://metacpan.org/pod/Hash%3A%3ASharedMem), though this may change in the future). This lets you keep a single set of metrics in a multithreaded app.
 
 `Prometheus::Tiny::Shared` should be a drop-in replacement for `Prometheus::Tiny`. Any differences in behaviour is a bug, and should be reported.
 
@@ -22,15 +22,11 @@ Prometheus::Tiny::Shared - A tiny Prometheus client with a shared database behin
 
     my $prom = Prometheus::Tiny::Shared->new(filename => ...);
 
-`filename`, if provided, will name an on-disk file to use as the backing store. If not supplied, an in-memory store will be used, which is suitable for testing purposes.
+`filename`, if provided, will name an on-disk location to store the backing store. If not supplied, a temporary location will be created and destroyed when your program ends, so suitable for testing purposes. For best performance, this should be stored on some kind of memory-backed filesystem (eg Linux `tmpfs`). The store is not intended to be a persistant, durable store (Prometheus will handle metrics resetting to zero correctly), so you don't need to worry about backing it up or any other maintenance.
 
 `init_file`, if set to true, will overwrite any existing data file with the given name. If you do this while you already have existing `Prometheus::Tiny::Shared` objects using the old file, strange things will probably happen. Don't do that.
 
 The `cache_args` argument will cause the constructor to croak. Code using this arg in previous versions of Prometheus::Tiny::Shared no longer work, and needs to be updated to use the `filename` argument instead.
-
-# NOTES
-
-The on-disk backing store file is not intended to be a persistent, durable store (Prometheus will handle metrics resetting to zero correctly). For best performance, store it on some kind of memory-backed filesystem (eg Linux `tmpfs`).
 
 # SUPPORT
 
