@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+- Rewrite to use Hash::SharedMem for the backend
 
 0.012     2020-03-19 14:35:01+11:00 Australia/Melbourne
 - Disable SQLite synchronous writes, and note that the backing store is not intended to be persistent or durable.
